fix image url login, signup

--- a/css/login.css
+++ b/css/login.css
@@ -34,7 +34,7 @@ body {
 .containerLogin {
   width: 100%;
   height: 100vh;
-  background-image: url(/img/LoginBG2.jpg);
+  background-image: url(../img/LoginBG2.jpg);
   background-position: center;
   background-size: cover;
 }
