--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@
   box-shadow: inset 0 0 0 3px #cf711f;
 }
 
-/* MOBILE */
 
 .icon-nav {
   height: 3rem;
@@ -855,10 +854,10 @@
   background-color: #eb984e;
   color: white;
   cursor: pointer;
-  padding: 1.7rem 2.5rem;
+  padding: 1.4rem 2.5rem;
   border-radius:50%;
   font-size: 3rem;
-  opacity: 0.5;
+  opacity: 0.5 !important;
   transition: opacity 0.4s;
 }
 
@@ -867,6 +866,6 @@
 }
 
 #scroll-top:hover {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
