--- a/css/queries.css
+++ b/css/queries.css
@@ -15,9 +15,9 @@
     grid-template-columns: repeat(2, 1fr);
   }
 
-  .main-link:link,
-  .main-nav-link:visited {
-    font-size: 1.6rem;
+  .main-nav-list .main-nav-link:link,
+  .main-nav-list .main-nav-link:visited {
+    font-size: 1.4rem;
   }
 }
 
@@ -27,7 +27,7 @@
 
 @media (max-width: 75em) {
   html {
-    /* 9px / 16px  */
+    /* 9px / 16px = 0.5625 = 56.25% */
     font-size: 56.25%;
   }
 
@@ -93,11 +93,6 @@
 
   #menu {
     display: inline-block;
-  }
-
-  .main-nav-link:link,
-  .main-nav-link:visited {
-    font-size: 2rem;
   }
 }
 
@@ -323,5 +318,10 @@
 
   .nav-logo {
     font-size: 2.5rem;
+  }
+
+  .product-range-img {
+    width: 100%;
+    height: auto;
   }
 }
