--- a/css/style.css
+++ b/css/style.css
@@ -75,7 +75,6 @@
   box-shadow: inset 0 0 0 3px #cf711f;
 }
 
-
 .icon-nav {
   height: 3rem;
   width: 3rem;
@@ -114,7 +113,6 @@
   z-index: 999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.04);
 }
-
 
 /**************************/
 /* HERO SECTION */
@@ -191,7 +189,6 @@
   color: #cf711f;
   font-weight: 700;
 }
-
 
 /**************************/
 /* ABOUT US SECTION */
@@ -349,7 +346,7 @@
 }
 
 .product-range-title {
-  font-size: 2.4rem;
+  font-size: 2rem;
   color: #333;
   font-weight: 600;
   margin-bottom: 3.2rem;
@@ -363,12 +360,11 @@
 }
 
 .product-range-attribute {
-  font-size: 1.8rem;
+  font-size: 1.6rem;
   display: flex;
   align-items: center;
   gap: 1.6rem;
 }
-
 
 .product-range-icon {
   height: 2.4rem;
@@ -377,7 +373,12 @@
 }
 
 .product-range-img {
-  width: 100%;
+  width: 34rem;
+  height: 21rem;
+}
+.product-range-img1 {
+  width: 28rem;
+  height: 21rem;
 }
 
 .all-recipes {
@@ -455,7 +456,6 @@
   transition: linear 0.4s;
 }
 
-
 .section-team .box-container .box .content {
   padding: 2rem;
 }
@@ -508,8 +508,7 @@
 
 .section-team .main-heading .heading-secondary {
   color: #fff;
-} 
-
+}
 
 /**************************/
 /* STATISTIC SECTION */
@@ -545,7 +544,6 @@
 .statistic {
   text-align: center;
 }
-
 
 /**************************/
 /* TESTIMONIALS SECTION */
@@ -607,7 +605,6 @@
 .gallery-item img:hover {
   transform: scale(1.1);
 }
-
 
 /**************************/
 /* CTA (MESSAGE) SECTION */
@@ -839,7 +836,6 @@
   box-shadow: none;
 }
 
-
 /**********************************************/
 /* TOMBOL BACK TO TOP*/
 /**********************************************/
@@ -855,7 +851,7 @@
   color: white;
   cursor: pointer;
   padding: 1.4rem 2.5rem;
-  border-radius:50%;
+  border-radius: 50%;
   font-size: 3rem;
   opacity: 0.5 !important;
   transition: opacity 0.4s;
@@ -868,4 +864,3 @@
 #scroll-top:hover {
   opacity: 1 !important;
 }
-
