--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 4.8rem;
+  z-index: 99999 !important;
 }
 
 .logo-link {
@@ -110,7 +111,7 @@
   padding-top: 0;
   padding-bottom: 0;
   background-color: rgba(255, 255, 255, 0.97);
-  z-index: 999;
+  z-index: 99999;
   box-shadow: 0 1.2rem 3.2rem rgba(0, 0, 0, 0.04);
 }
 
@@ -864,3 +865,133 @@
 #scroll-top:hover {
   opacity: 1 !important;
 }
+
+
+
+
+
+
+.card{
+  position: fixed;
+  top:10vh;
+  left: 100%;
+  width: 500px;
+  background-color:   #fdf2e9 ;
+  height: 90vh;
+  transition: 0.5s;
+  z-index: 9999;
+}
+.active .card{
+  left: calc(100% - 500px);
+}
+.active .container{
+ transform: translateX(-200px);
+}
+.card h1{
+  color:  #e67e22 ;
+  font-weight: 100;
+  margin: 0;
+  padding: 0 20px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+}
+.card .checkOut{
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+
+}
+.card .checkOut div{
+  background-color: #eb984e;
+  width: 100%;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  cursor: pointer;
+}
+.card .checkOut div:nth-child(2){
+  background-color: #e67e22  ;
+  color: black;
+}
+.listCard li{
+  display: grid;
+  grid-template-columns: 100px repeat(3, 1fr);
+  color: black;
+  row-gap: 10px;
+  font-size: 15px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+}
+.listCard li div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.listCard li img{
+  width: 90%;
+}
+.listCard li button{
+  background-color: #fff5;
+  border: none;
+  font-size: 20px;
+  z-index: 999999;
+  
+}
+.listCard li button:focus {
+  outline: none;
+  box-shadow: none;
+}
+.listCard .count{
+  margin: 0 10px;
+}
+
+.shopping{
+  position: relative;
+  text-align: right;
+}
+.shopping img{
+  width: 40px;
+}
+.shopping span{
+  background: red;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  position: absolute;
+  top: -5px;
+  left: 80%;
+  padding: 3px 5px;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+.total{
+  font-size: 15px;
+  padding: 0;
+  margin:0;
+  border: 0;
+}
+.closeShopping{
+  font-size: 12px;
+  padding: 0;
+  margin:0;
+  border: 0;
+}
+.container-ass{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 50px;
+  row-gap: 40px;
+  margin-top: 50px;
+  padding-right: 50px;
+  padding-left: 50px;
+}
+
